# rag-from-scratch

./: .gitignore  README.md  pyproject.toml  rag.ipynb
app/: config.py  loader.py  rag.py  splitter.py  vector_store.py
